Modernize build and code